components/epd0or8lm-nodejs/base/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app.kubernetes.io/instance: epd0or8lm-nodejs
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: epd0or8lm-nodejs 
  name: epd0or8lm-nodejs
spec:
  ports:
  - port: 3001 
    targetPort: 3001 
  selector:
    app.kubernetes.io/instance: epd0or8lm-nodejs
