components/epd0or8lm-nodejs/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: epd0or8lm-nodejs
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: epd0or8lm-nodejs 
  name: epd0or8lm-nodejs
spec:
  port:
    targetPort: 3001 
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: epd0or8lm-nodejs
    weight: 100
